<resources>
    <string name="question_count">%d questions</string>
    <string name="_section">Section-%d</string>
    <string name="_comments">%d comments</string>
    <string name="_members">%d members</string>
    <string name="_students">%d student(s) are in this section</string>
    <string name="_followers">%d followers</string>
    <string name="_reviews">%d reviews</string>
    <string name="_images">%d images</string>
    <string name="_discount">- %d%%</string>
    <string name="_kzt">%d kzt</string>
    <string name="_reminder">Remind in %s</string>
    <string name="_send_as">Send as %s</string>
    <string name="timetable_notification_title">%s: %s left</string>
    <string name="brackets">(%s)</string>
    <string name="app_name" translatable="false">NULife</string>
    <string name="courses">Courses</string>
    <string name="free">Free</string>
    <string name="unavailable">Unavailable</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="title_timetable">Timetable</string>
    <string name="search">Search</string>
    <string name="new_class">New Class</string>
    <string name="course_title">Course title</string>
    <string name="add_course">Add course</string>
    <string name="save">Save</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="room">Room</string>
    <string name="professor">Professor</string>
    <string name="enroll">Enroll</string>
    <string name="cancel">Cancel</string>
    <string name="market">Market</string>
    <string name="like">Like</string>
    <string name="saved">Saved</string>
    <string name="crate_new_course">Crate new course</string>
    <string name="select_school">Select school</string>
    <string name="select_major">Select major</string>
    <string name="year">Year</string>
    <string name="chat_with_your">Chat with your</string>
    <string name="coursemates">coursemates</string>
    <string name="setup_your">Setup your</string>
    <string name="timetable">Timetable</string>
    <string name="buy_anything">Buy anything on the</string>
    <string name="market_lc">market</string>
    <string name="sign_in_picture">Sign in picture</string>
    <string name="section">Section</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="welcometext">Welcome to your Student Life</string>
    <string name="setup_your_profile">Setup your profile</string>
    <string name="leave">Leave</string>
    <string name="new_question">New question</string>
    <string name="syllabus">Syllabus</string>
    <string name="join">Join</string>
    <string name="question">Question</string>
    <string name="topic">Topic</string>
    <string name="anonymous">Anonymous</string>
    <string name="send_anonymously">Send anonymously</string>
    <string name="ask_a_question">Ask a question</string>
    <string name="delete_course">Delete course</string>
    <string name="edit_course">Edit course</string>
    <string name="see_all">See all</string>
    <string name="featured">Featured</string>
    <string name="updates">Updates</string>
    <string name="suffix">Suffix</string>
    <string name="students">Students</string>
    <string name="admin">Admin</string>
    <string name="created">Created</string>
    <string name="deadlines">Deadlines</string>
    <string name="pending">Pending</string>
    <string name="upcoming">Upcoming</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="set_reminder">Set reminder</string>
    <string name="select_section">Select section</string>
    <string name="details">Details</string>
    <string name="ask_all_sections">Ask all sections</string>
    <string name="upload_images">Upload images</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clubs">Clubs</string>
    <string name="submit">Submit</string>
    <string name="select_topic">Select topic</string>
    <string name="new_answer">New Answer</string>
    <string name="answer">Answer</string>
    <string name="your_answer">Your answer</string>
    <string name="comments">Comments</string>
    <string name="publick">Public</string>
    <string name="set_priority">Set priority</string>
    <string name="add_deadline">Add Deadline</string>
    <string name="select_date">Select date</string>
    <string name="edit_question">Edit Question</string>
    <string name="delete_question">Delete Question</string>
    <string name="fall">Fall</string>
    <string name="spring">Spring</string>
    <string name="summer">Summer</string>
    <string name="type">Type</string>
    <string name="add_resource">Add resource</string>
    <string name="semester">Semester</string>
    <string name="week">Week</string>
    <string name="file">File</string>
    <string name="images">Images</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_answer">Add answer</string>
    <string name="food">Food</string>
    <string name="navigation_drawer_open">Open the navigation drawer</string>
    <string name="navigation_drawer_close">Close the navigation drawer</string>
    <string name="about_us">About Us</string>
    <string name="hours">Hours</string>
    <string name="mon_ntue_nwed_nthu_nfri_nsat_nsun">Mon\nTue\nWed\nThu\nFri\nSat\nSun</string>
    <string name="contacts">Contacts</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a review</string>
    <string name="cafe">Cafe</string>
    <string name="meal_image">Meal image</string>
    <string name="others">Others</string>
    <string name="price">Price:</string>
    <string name="available">Available</string>
    <string name="your_review">Your review</string>
    <string name="apply">Apply</string>
    <string name="services">Sevices</string>
    <string name="for_free">For free</string>
    <string name="kitchen">Kitchen</string>
    <string name="home">Home</string>
    <string name="books">Books</string>
    <string name="beauty_and_personal_care">Beauty and personal care</string>
    <string name="hobby_and_personal_care">Hobby and personal care</string>
    <string name="electronics">Electronics</string>
    <string name="clothes">Clothes</string>
    <string name="transport">Transport</string>
    <string name="jobs">Jobs</string>
    <string name="category">Category</string>
    <string name="filter">Filter</string>
    <string name="show_items_only_for_women">Show items only for women</string>
    <string name="show_items">Show items</string>
    <string name="all">All</string>
    <string name="selling">Selling</string>
    <string name="buying">Buying</string>
    <string name="sort_by">Sort by</string>
    <string name="my_favorites">My Favorites</string>
    <string name="cafe_logo">Cafe logo</string>
    <string name="all_events">All Events</string>
    <string name="all_clubs">All Clubs</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="lorem">Lorem ipsum dolor sit amet, conseleifend lorem, eu fermentum dui diam et ex. Maecenas tristique tincidunt facilisis. Duis rutrum neque vel suscipit dapibus. Etiam feugiat nec arcu sit amet suscipit. Vivamus et pretium ex. Quisque ac pellentesque elit. Phasellus vitae gravida magna. Vivamus sapien magna, imperdiet a nisi in, blandit aliquet erat.</string>
    <string name="events">Events</string>
    <string name="course_info">Course info</string>
    <string name="answers">Answers</string>
    <string name="top">Top</string>
    <string name="join_us">How can you join us?</string>
    <string name="our_team">Our team</string>
    <string name="author">Author</string>
    <string name="size">Size</string>
    <string name="open_folder">Open folder</string>
    <string name="force_download">Force download</string>
    <string name="all_sections">All sections</string>
    <string name="priority">Priority</string>
    <string name="add_to_timetable">Add to timetable</string>
    <string name="timetable_notification_channel_description">Timetable event notifications</string>
    <string name="timetable_notification_channel_id" translatable="false">timetable_channel</string>
    <string name="timetable_notification_channel_name">Timetable</string>
    <string name="cloud_notification_channel_description">Cloud notifications</string>
    <string name="cloud_notification_channel_id" translatable="false">cloud_channel</string>
    <string name="cloud_notification_channel_name">Cloud Notifications</string>
    <string name="add">Add</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="add_routine">Add routine</string>
    <string name="title">Title</string>
    <string name="associate_with">Associate with</string>
    <string name="add_task">Add task</string>
    <string name="select">Select</string>
    <string name="send">Send</string>
    <string name="female_only">Female only</string>
    <string name="sell">Sell</string>
    <string name="select_a_category">Select a category</string>
    <string name="add_item">Add item</string>
    <string name="event">Event</string>
    <string name="share">Share</string>
    <string name="event_poster">Event poster</string>
    <string name="reviews_small">reviews</string>
    <string name="followers">followers</string>
    <string name="members">members</string>
    <string name="upload_files">Upload files</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="theme">Theme</string>
    <string name="display">Display</string>
    <string name="edit_profile">Edit profile</string>
    <string name="contact">Contact</string>
    <string name="new_contact">New contact</string>
    <string name="accept">Accept</string>
    <string name="are_you_sure">Are you sure you want to delete this?</string>
    <string name="confirmation">Confirmation</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unspecified">Unspecified</string>
    <string name="applied">Applied</string>
    <string name="saved_items">Saved Items</string>
    <string name="my_categories">My categories</string>
    <string name="included_contacts">Included contacts</string>
    <string name="empty">empty</string>
    <string name="send_my_contacts">Send my contacts</string>
    <string name="edit_my_contacts">Edit my contacts</string>
    <string name="my_request">My request</string>
    <string name="my_rating">My rating</string>
    <string name="unlike">Unlike</string>
    <string name="requests">Requests</string>
    <string name="discounted_price">Discounted price</string>
    <string name="add_to_my_timetable">Add to my timetable</string>
    <string name="date">Date</string>
    <string name="added">Added</string>
    <string name="upcoming_events">Upcoming events</string>
    <string name="my_clubs">My clubs</string>
    <string name="gender_information">Gender information</string>
    <string name="my_contacts">My contacts</string>
    <string name="auth_first_title">Effective learning tool</string>
    <string name="auth_first_text">Forum, deadlines and resources for your courses in one place</string>
    <string name="auth_second_title">Don\'t miss any events</string>
    <string name="auth_second_text">Find your communities, discover the latest events, concerts, and opportunities</string>
</resources>