<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/courses"
            android:icon="@drawable/ic_courses"
            android:title="@string/courses" />
        <item
            android:id="@+id/timetable"
            android:icon="@drawable/ic_timetable"
            android:title="@string/timetable" />
        <item
            android:id="@+id/food"
            android:icon="@drawable/ic_cafes"
            android:title="@string/food" />
        <item
            android:id="@+id/clubs"
            android:icon="@drawable/ic_club"
            android:title="@string/clubs" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

</menu>
