<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_auth"
    android:fitsSystemWindows="false"
    tools:context=".ui.AuthActivity">

    <View
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="96dp"
        android:layout_marginTop="192dp"
        android:background="@drawable/ic_title"
        app:layout_constraintBottom_toTopOf="@id/details"
        app:layout_constraintDimensionRatio="3.164"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/signInButton"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:id="@+id/first"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/second"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/first_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_first_title"
                android:textAppearance="@style/JoinButtonText"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auth_first_text"
                android:textAppearance="@style/ImageCount"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/second"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginEnd="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/second_icon"
            app:layout_constraintTop_toBottomOf="@id/first">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auth_second_title"
                android:textAppearance="@style/JoinButtonText"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/auth_second_text"
                android:textAppearance="@style/ImageCount"
                android:textColor="@color/white" />

        </LinearLayout>

        <View
            android:id="@+id/first_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/ic_courses"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/first"
            app:layout_constraintEnd_toStartOf="@id/first"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/first" />

        <View
            android:id="@+id/second_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/ic_club"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/second"
            app:layout_constraintEnd_toStartOf="@id/second"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/second" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginHorizontal="48dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_google"
        android:elevation="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="24dp"
        android:text="@string/sign_in_with_google"
        android:textAppearance="@style/MainColorBold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/details" />

</androidx.constraintlayout.widget.ConstraintLayout>